# google_benchmark_cmake_template

./: .gitignore  README.md
benchmark/: CMakeLists.txt  run_benchmark.sh
benchmark/bench/: .CMakeLists.txt.swp  CMakeLists.txt
benchmark/bench/src/: bench.cpp
benchmark/lib/: CMakeLists.txt
benchmark/lib/inc/: function.h
benchmark/lib/src/: function.cpp
